After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 733424 - Leak in gnibbles_move_worms()
Leak in gnibbles_move_worms()
Status: RESOLVED FIXED
Product: gnome-nibbles
Classification: Applications
Component: general
git master
Other Linux
: Normal minor
: ---
Assigned To: gnome-nibbles-maint
gnome-nibbles-maint
Depends on:
Blocks:
 
 
Reported: 2014-07-19 21:29 UTC by Michael Catanzaro
Modified: 2014-08-19 00:40 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix leak in gnibbles_move_worms() (845 bytes, patch)
2014-07-19 21:31 UTC, Michael Catanzaro
committed Details | Review

Description Michael Catanzaro 2014-07-19 21:29:02 UTC
In gnibbles_move_worms() the local variable dead is not always freed before the function returns
Comment 1 Michael Catanzaro 2014-07-19 21:31:28 UTC
Created attachment 281209 [details] [review]
Fix leak in gnibbles_move_worms()

Always free dead before returning
Comment 2 gQuigs 2014-07-20 20:26:37 UTC
Review of attachment 281209 [details] [review]:

Classic..
Comment 3 Michael Catanzaro 2014-08-19 00:40:38 UTC
Attachment 281209 [details] pushed as aca95c1 - Fix leak in gnibbles_move_worms()