Fix leak in gnibbles_move_worms()

Always free dead before returning

https://bugzilla.gnome.org/show_bug.cgi?id=733424